# ottawa-genai-research-assistant

./: .dev-state.yaml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  create_migration_package.py  docker-compose.yml  git_status.txt  pyproject.toml  render.yaml  requirements.txt
.agent/: README.md
.claude/: README.md  settings.json
.github/: README.md
.kiro/: README.md  kiro-docs-automation.md
backend/: .dockerignore  .env.example  .ruffignore  Dockerfile  README.md  __init__.py  _debug_folder.py  app.db-shm  app.db-wal  env.example  main.py  migrate_tests.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/admin/: routes.py  schemas.py  service.py
backend/app/analysis/: routes.py  schemas.py  service.py
backend/app/analytics/: __init__.py  routes.py  schemas.py  service.py
backend/app/api/: __init__.py  auth.py  chat.py  documents.py  metrics.py  reports.py  settings.py
backend/app/azure/: __init__.py  auth.py  openai.py  prompts.py  search.py  storage.py
backend/app/benchmark/: __init__.py  routes.py  schemas.py  service.py
backend/app/chat/: __init__.py  routes.py  schemas.py  service.py
backend/app/core/: __init__.py  auth.py  azure_auth.py  azure_openai.py  azure_search.py  azure_storage.py  config.py  data_paths.py  database.py  dependencies.py  document_pipeline.py  document_store.py  enums.py  error_messages.py  exceptions.py  models.py  pdf_extractor.py  rag_prompts.py  rbac.py  schemas.py  security.py  seed.py  text_chunker.py  utils.py
backend/app/core/seeds/: __init__.py  benchmark_queries.py  chart_templates.py  citations.py  knowledge_bases.py  prompts.py  system_settings.py
backend/app/doc_intel/: __init__.py  pdf_extractor.py  pipeline.py  text_chunker.py
backend/app/documents/: folder_routes.py  folder_service.py  routes.py  schemas.py  service.py  sync_routes.py
backend/app/evaluation/: __init__.py  prompts.py  routes.py  schemas.py  service.py
backend/app/feedback/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/health/: __init__.py  routes.py  schemas.py  service.py
backend/app/knowledge/: __init__.py  routes.py  schemas.py  service.py
backend/app/models/: __init__.py  chat.py  document.py  report.py  routes.py  schemas.py  service.py  system.py  user.py
backend/app/ollama/: __init__.py  service.py
backend/app/prompts/: __init__.py  defaults.py  routes.py  schemas.py  service.py
backend/app/repositories/: __init__.py  base.py  chat_repository.py  document_repository.py  report_repository.py  system_repository.py  user_repository.py
backend/app/research/: __init__.py  chart_service.py  routes.py  schemas.py  service.py
backend/app/response/: __init__.py  schemas.py  service.py
backend/app/search/: __init__.py  admin_routes.py  azure_engine.py  embedding.py  engine.py  pageindex_engine.py  sqlite_engine.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  document_service.py  embedding_service.py  report_service.py  template_service.py  user_service.py  vector_store.py
backend/app/services/ai_providers/: __init__.py
backend/app/shared/: __init__.py  dependencies.py  exceptions.py  schemas.py
backend/app/templates/reports/: default.html  detailed_analysis.html
backend/app/users/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/data/: app.db-shm  app.db-wal
backend/docs/: Architecture Guide.md  架构说明.md
backend/monk/chats/: conversations.json  messages.json
backend/monk/documents/: documents.json
backend/monk/reports/: reports.json
backend/monk/users/: users.json  users_backup_20250917_213813.json
backend/monk/vector_db/: chroma.sqlite3
backend/tests/: __init__.py  conftest.py  run_tests.py  test_evaluation.py  test_vector_store.py
backend/tests/analysis/: __init__.py  test_routes.py  test_service.py
backend/tests/api/: __init__.py  test_documents_api.py  test_reports_api.py  test_settings_api.py
backend/tests/azure/: test_openai.py  test_prompts.py  test_search.py  test_storage.py
backend/tests/chat/: __init__.py  test_routes.py
backend/tests/core/: test_azure_openai.py  test_azure_search.py  test_azure_storage.py  test_document_pipeline.py  test_document_store.py  test_pdf_extractor.py  test_rag_prompts.py  test_text_chunker.py
backend/tests/doc_intel/: test_pdf_extractor.py  test_pipeline.py  test_text_chunker.py
backend/tests/documents/: test_routes.py  test_service.py  test_upload.py
backend/tests/evaluation/: test_evaluation.py
backend/tests/health/: __init__.py  test_health.py
backend/tests/integration/: __init__.py  conftest.py  pytest.ini  run_integration_tests.py  test_api_integration.py  test_auth_integration.py  test_full_workflow.py  test_service_integration.py  test_workflow_integration.py
backend/tests/integration/reports/: api_results.xml  auth_results.xml  integration_test_report.json  integration_test_summary.md  service_results.xml  workflow_results.xml
backend/tests/repositories/: test_user_repository.py
backend/tests/research/: __init__.py  test_chart_service.py  test_routes.py  test_service.py  test_us202_natural_language_query.py
backend/tests/services/: test_chat_service.py
backend/tests/unit/: __init__.py  conftest.py  pytest.ini  validate_test_constraints.py
backend/tests/unit/api/: test_auth_api.py  test_chat_api.py  test_documents_api.py  test_reports_api.py  test_settings_api.py
backend/tests/unit/services/: test_auth_service.py  test_chat_service.py
backend/tests/users/: __init__.py  test_routes.py  test_service.py
backend/uploads/: .gitkeep
docs/: Architecture.md  Architecture_extracted.txt  CODING_STANDARDS.md  DEPLOYMENT.md  Data Management Guide.md  INTEGRATION_TESTING.md  Product Requirements Document (PRD).md  Project Code Review.txt  Project Status Report.md  README.md  System Architecture Guide.md  TEST_STATUS_REPORT.md  assignment_report_lannie.md  changelog.md  contributing.md  ed-research-tool-brief.md  index.md  prd.md  下一步开发计划.md  数据管理指南.md  (+9 more)
(+1212 files in other folders)
