[project]
name = "ottawa-genai-research-assistant"
version = "1.4.2"
description = "Enterprise-grade research assistant for the City of Ottawa"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ottawa GenAI Team" }
]
keywords = ["genai", "research", "assistant", "ottawa", "fastapi", "react"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心Web框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # HTTP客户端和工具
    "requests>=2.31.0",
    "httpx>=0.25.0",
    # 数据处理
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # PDF处理
    "pypdf>=6.0.0",
    "pdfplumber>=0.9.0",
    # 认证和安全
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    # 环境配置
    "python-dotenv>=1.0.0",
    # 模板引擎
    "jinja2>=3.1.0",
    # 日志
    "loguru>=0.7.0",
    # 邮件验证和处理
    "email-validator>=2.0.0",
    # 文件处理
    "aiofiles>=23.0.0",
    # 时间处理
    "python-dateutil>=2.8.0",
    # JSON处理增强
    "orjson>=3.9.0",
    # Google OAuth支持
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    # AI/ML相关 - 免费AI提供商
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    # AI/ML相关（可选）
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    # 向量数据库（可选）
    "chromadb>=0.4.0",
    "pinecone-client>=2.2.0",
    # 文档和字符串处理
    "python-slugify>=8.0.0",
    "unidecode>=1.3.0",
    # 缓存
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    # 监控和性能
    "prometheus-client>=0.17.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "pillow>=11.3.0",
    "pdf2image>=1.17.0",
]

[project.optional-dependencies]
dev = [
    # 开发工具
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    
    # 测试工具
    "factory-boy>=3.3.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=backend/app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
